Lower z-index to prevent searchbox issue

--- a/src/css/protondbCard.css
+++ b/src/css/protondbCard.css
@@ -104,7 +104,6 @@
     width: 0rem !important;
     text-align: center;
     text-indent: 100rem !important;
-    z-index: 10000;
 }
 
 .proton_rating_search:hover {
@@ -114,6 +113,8 @@
     transition: width 0.2s ease-in-out;
     width: 20%!important;
     text-indent: 0vw !important;
+    z-index: 1530;
+
 }
 
 .proton_rating_link_search {
